# SBPShots

./: .gitignore  README.md
SBPShots/: CMakeLists.txt  CMakePresets.json
SBPShots/forms/: main_window.ui
SBPShots/includes/SBPShots/capture/: capture_target.h  capture_target_enumerator.h  screenshot_service.h  window_capture_wgc.h
SBPShots/includes/SBPShots/controllers/: main_window_controller.h
SBPShots/includes/SBPShots/core/: app_settings.h  campaign_sequence.h  path_tokens.h  shot_file_namer.h  shot_storage.h  shot_types.h
SBPShots/includes/SBPShots/ui/: main_window.h
SBPShots/includes/SBPShots/viewers/: image_viewer.h
SBPShots/includes/SBPShots/widgets/: padded_spin_box.h  roi_selector.h
SBPShots/manual/: USER_MANUAL.md
SBPShots/resources/: resources.qrc
SBPShots/resources/windows/: app_icon.rc.in
SBPShots/scripts/: deploy_release.bat
SBPShots/sources/apps/: AppSBPShots.cpp
SBPShots/sources/capture/: capture_target_enumerator.cpp  screenshot_service.cpp  window_capture_wgc.cpp
SBPShots/sources/controllers/: main_window_controller.cpp
SBPShots/sources/core/: app_settings.cpp  campaign_sequence.cpp  path_tokens.cpp  shot_file_namer.cpp  shot_storage.cpp
SBPShots/sources/ui/: main_window.cpp
SBPShots/sources/viewers/: image_viewer.cpp
SBPShots/sources/widgets/: padded_spin_box.cpp  roi_selector.cpp
TopasShots/: CMakeLists.txt
TopasShots/forms/: main_window.ui
TopasShots/includes/TopasShots/capture/: capture_target.h  capture_target_enumerator.h  screenshot_service.h  window_capture_wgc.h
TopasShots/includes/TopasShots/controllers/: main_window_controller.h
TopasShots/includes/TopasShots/core/: app_settings.h  campaign_sequence.h  path_tokens.h  shot_file_namer.h  shot_storage.h  shot_types.h
TopasShots/includes/TopasShots/ui/: main_window.h
TopasShots/includes/TopasShots/viewers/: image_viewer.h
TopasShots/includes/TopasShots/widgets/: padded_spin_box.h  roi_selector.h
TopasShots/manual/: USER_MANUAL.md
TopasShots/resources/windows/: app_icon.rc.in
TopasShots/scripts/: deploy_release.bat
TopasShots/sources/apps/: AppTopasShots.cpp
TopasShots/sources/capture/: capture_target_enumerator.cpp  screenshot_service.cpp  window_capture_wgc.cpp
TopasShots/sources/controllers/: main_window_controller.cpp
TopasShots/sources/core/: app_settings.cpp  campaign_sequence.cpp  path_tokens.cpp  shot_file_namer.cpp  shot_storage.cpp
TopasShots/sources/ui/: main_window.cpp
TopasShots/sources/viewers/: image_viewer.cpp
TopasShots/sources/widgets/: padded_spin_box.cpp  roi_selector.cpp
